ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: default
  annotations:
    # triggers the aws lb controller to create ONE single Internet-facing ALB
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    # triggers ExternalDNS to map both domains to this single ALB automatically!
    external-dns.alpha.kubernetes.io/hostname: "voting.sctp.sandbox.com, result.sctp.sandbox.com"
spec:
  ingressClassName: alb
  rules:
    - host: voting.sctp.sandbox.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote # Routes voting traffic to your vote service
                port:
                  number: 8080
    - host: result.sctp.sandbox.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result # Routes result traffic to your result service
                port:
                  number: 8081
